first version of slider

--- a/src/index.html
+++ b/src/index.html
@@ -273,31 +273,35 @@
         <h3 class="title title_fz21">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</h3>
         <div class="feedback__wrap">
             <div class="slider">
-                <div class="slider__item">
-                    <div class="slider__img"><img src="img/feedback/feedback_img_1.png" alt="client"></div>
-                    <div class="slider__descr">
-                        <div class="slider__name">Дмитрий Иванов</div>
-                        <p class="slider__text">
-                            Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, до больших партий детской одежды. Буду продолжать пользоваться услугами даной компании.
-                        </p>
-                    </div>
-                </div>
-                <div class="slider__item slider__item_active">
-                    <div class="slider__img"><img src="img/feedback/feedback_img_1.png" alt="client"></div>
-                    <div class="slider__descr">
-                        <div class="slider__name">Анисимова Ольга</div>
-                        <p class="slider__text">
-                            Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, до больших партий детской одежды. Буду продолжать пользоваться услугами даной компании.
-                        </p>
-                    </div>
-                </div>
-                <div class="slider__item">
-                    <div class="slider__img"><img src="img/feedback/feedback_img_1.png" alt="client"></div>
-                    <div class="slider__descr">
-                        <div class="slider__name">Сергей Валиев</div>
-                        <p class="slider__text">
-                            Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, до больших партий детской одежды. Буду продолжать пользоваться услугами даной компании.
-                        </p>
+                <div class="slider-wrapper">
+                    <div class="slider-inner">
+                        <div class="slider__item">
+                            <div class="slider__img"><img src="img/feedback/feedback_img_2.png" alt="client"></div>
+                            <div class="slider__descr">
+                                <div class="slider__name">Дмитрий Иванов</div>
+                                <p class="slider__text">
+                                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, до больших партий детской одежды. Буду продолжать пользоваться услугами даной компании.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="slider__item">
+                            <div class="slider__img"><img src="img/feedback/feedback_img_1.png" alt="client"></div>
+                            <div class="slider__descr">
+                                <div class="slider__name">Анисимова Ольга</div>
+                                <p class="slider__text">
+                                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, до больших партий детской одежды. Буду продолжать пользоваться услугами даной компании.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="slider__item">
+                            <div class="slider__img"><img src="img/feedback/feedback_img_3.png" alt="client"></div>
+                            <div class="slider__descr">
+                                <div class="slider__name">Сергей Валиев</div>
+                                <p class="slider__text">
+                                    Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, до больших партий детской одежды. Буду продолжать пользоваться услугами даной компании.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -327,8 +331,37 @@
     </section>
     <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122.8042248012252!2d37.62613565683453!3d55.74793189983549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54af8f4b2bb81%3A0x45d8b81f41916c35!2sSadovnicheskaya%20St%2C%205%2C%20Moskva%2C%20Russia%2C%20115035!5e0!3m2!1sen!2skz!4v1669044535642!5m2!1sen!2skz" allowfullscreen="none" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="map__address">
+        </div>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+
+    <section class="footer">
+        <div class="container">
+            <div class="footer__header">
+                <div class="footer__logo-block">
+                    <div class="footer__logo"><img src="icons/logo/mail_logo.png" alt="logo"></div>
+                    <div class="footer__title">Global Opt - Доставка грузов из Китая в Россию и СНГ</div>
+                </div>
+                <div class="footer__call">
+                    <div class="footer__phone">
+                        <div class="footer__phone-descr">Есть вопросы?</div>
+                        <a href="tel:+79264230100" class="footer__phone-link">+7 (926) 423 01 00</a>
+                    </div>
+                    <button class="btn"><a href="#">Перезвоните мне</a></button>
+                </div>
+            </div>
+            <div class="divider divider_footer"></div>
+            <div class="footer__bottom">
+                <div class="footer__copyright">© 2010 Scratch.com.ua</div>
+                <a href="#" class="footer__policy">Политика конфидециальности</a>
+                <div class="footer__site-block">
+                    <div class="footer__site-creating">Создание сайта:</div>
+                    <img src="icons/footer/footer__site-creating-logo.png" alt="logo">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script> -->
     <script src="js/script.js"></script>
 </body>
 </html>
